--- a/helm/harness/templates/proxy.yaml
+++ b/helm/harness/templates/proxy.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: proxy
+  annotations:
+    {{- toYaml .Values.configMap.annotations | nindent 4 }}
+  labels:
+    {{- include "harness.configMap.labels" . | nindent 4 }}
 data:
   nginx.conf: |
     worker_processes 1;
