--- a/helm/harness/templates/redis.yaml
+++ b/helm/harness/templates/redis.yaml
@@ -2,8 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: redis
+  annotations:
+    {{- toYaml .Values.configMap.annotations | nindent 4 }}
   labels:
     app: redis
+    {{- include "harness.configMap.labels" . | nindent 4 }}
 
 ---
 
