--- a/helm/harness/values.yaml
+++ b/helm/harness/values.yaml
@@ -1,16 +1,6 @@
+# See readme for details on setting harness_host
 harness_host: ""
 listen_port: "7143"
-
-versions:
-  busybox: 1.33.1
-  log_service: release-18
-  manager: 73235
-  mongo: 4.2.8
-  ng_auth_ui: 0.30.1
-  ng_ui: 0.280.16
-  nginx: 1.21.4
-  redis: 6.2.5-alpine
-  scm: release-27
 
 # Add custom annotations/labels for deployments
 deployment:
@@ -54,6 +44,19 @@ secret:
   labels:
   # name: value
 
+# Harness application versions
+versions:
+  busybox: 1.33.1
+  log_service: release-18
+  manager: 73235
+  mongo: 4.2.8
+  ng_auth_ui: 0.30.1
+  ng_ui: 0.280.16
+  nginx: 1.21.4
+  redis: 6.2.5-alpine
+  scm: release-27
+
+# Resource request & limit configuration per application
 ng_ui:
   resources:
     limits:
