--- a/helm/harness/templates/log-service.yaml
+++ b/helm/harness/templates/log-service.yaml
@@ -36,7 +36,7 @@ spec:
         app: log-service
         {{- include "harness.replica.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ include "harness.serviceAccountName" }}
+      serviceAccountName: {{ include "harness.serviceAccountName" . }}
       containers:
       - name: log-service
         image:  harness/log-service-signed:{{ .Values.versions.log_service }}
