--- a/helm/harness/templates/mongodb.yaml
+++ b/helm/harness/templates/mongodb.yaml
@@ -47,7 +47,7 @@ data:
     SECONDS=0
     timeout="${TIMEOUT:-900}"
     tls_mode="${TLS_MODE}"
-    
+
     if [[ "$AUTH" == "true" ]]; then
         admin_user="$ADMIN_USER"
         admin_password="$ADMIN_PASSWORD"
@@ -58,28 +58,28 @@ data:
         fi
         auth_args=("--auth" "--keyFile=/data/configdb/key.txt")
     fi
-    
+
     log() {
         local msg="$1"
         local timestamp
         timestamp=$(date --iso-8601=ns)
         echo "[$timestamp] [$script_name] $msg" 2>&1 | tee -a /work-dir/log.txt 1>&2
     }
-    
+
     retry_until() {
         local host="${1}"
         local command="${2}"
         local expected="${3}"
         local creds=("${admin_creds[@]}")
-    
+
         # Don't need credentials for admin user creation and pings that run on localhost
         if [[ "${host}" =~ ^localhost ]]; then
             creds=()
         fi
-    
+
         until [[ $(mongo admin --host "${host}" "${creds[@]}" "${ssl_args[@]}" --quiet --eval "${command}" | tail -n1) == "${expected}" ]]; do
             sleep 1
-    
+
             if (! ps "${pid}" &>/dev/null); then
                 log "mongod shutdown unexpectedly"
                 exit 1
@@ -88,11 +88,11 @@ data:
                 log "Timed out after ${timeout}s attempting to bootstrap mongod"
                 exit 1
             fi
-    
+
             log "Retrying ${command} on ${host}"
         done
     }
-    
+
     shutdown_mongo() {
         local host="${1:-localhost}"
         local args='force: true'
@@ -102,7 +102,7 @@ data:
           kill -TERM "${pid}"
         fi
     }
-    
+
     init_mongod_standalone() {
         if [[ ! -f /init/initMongodStandalone.js ]]; then
             log "Skipping init mongod standalone script"
@@ -111,7 +111,7 @@ data:
             log "mongod standalone script currently not supported on initial install"
             return 0
         fi
-    
+
         local port="27018"
         log "Starting a MongoDB instance as standalone..."
         mongod --config /data/configdb/mongod.conf --dbpath=/data/db "${auth_args[@]}" "${ssl_server_args[@]}" --port "${port}" --bind_ip=0.0.0.0 2>&1 | tee -a /work-dir/log.txt 1>&2 &
@@ -123,10 +123,10 @@ data:
         mongo admin --port "${port}" "${admin_creds[@]}" "${ssl_args[@]}" /init/initMongodStandalone.js
         shutdown_mongo "localhost:${port}"
     }
-    
+
     my_hostname=$(hostname)
     log "Bootstrapping MongoDB replica set member: $my_hostname"
-    
+
     log "Reading standard input..."
     while read -ra line; do
         if [[ "${line}" == *"${my_hostname}"* ]]; then
@@ -134,7 +134,7 @@ data:
         fi
         peers=("${peers[@]}" "$line")
     done
-    
+
     # Generate the ca cert
     ca_crt=/data/configdb/tls.crt
     if [ -f "$ca_crt"  ]; then
@@ -143,10 +143,10 @@ data:
         pem=/work-dir/mongo.pem
         ssl_args=(--ssl --sslCAFile "$ca_crt" --sslPEMKeyFile "$pem")
         ssl_server_args=(--sslMode "$tls_mode" --sslCAFile "$ca_crt" --sslPEMKeyFile "$pem")
-    
+
     # Move into /work-dir
     pushd /work-dir
-    
+
     cat >openssl.cnf <<EOL
     [req]
     req_extensions = v3_req
@@ -163,36 +163,36 @@ data:
     DNS.4 = localhost
     DNS.5 = 127.0.0.1
     EOL
-    
+
         # Generate the certs
         openssl genrsa -out mongo.key 2048
         openssl req -new -key mongo.key -out mongo.csr -subj "/OU=MongoDB/CN=$my_hostname" -config openssl.cnf
         openssl x509 -req -in mongo.csr \
             -CA "$ca_crt" -CAkey "$ca_key" -CAcreateserial \
             -out mongo.crt -days 3650 -extensions v3_req -extfile openssl.cnf
-    
+
         rm mongo.csr
         cat mongo.crt mongo.key > $pem
         rm mongo.key mongo.crt
     fi
-    
+
     init_mongod_standalone
-    
+
     if [[ "${SKIP_INIT}" == "true" ]]; then
         log "Skipping initialization"
         exit 0
     fi
-    
+
     log "Peers: ${peers[*]}"
     log "Starting a MongoDB replica"
     mongod --config /data/configdb/mongod.conf --dbpath=/data/db --replSet="$replica_set" --port="${port}" "${auth_args[@]}" "${ssl_server_args[@]}" --bind_ip=0.0.0.0 2>&1 | tee -a /work-dir/log.txt 1>&2 &
     pid=$!
     trap shutdown_mongo EXIT
-    
+
     log "Waiting for MongoDB to be ready..."
     retry_until "localhost" "db.adminCommand('ping').ok" "1"
     log "Initialized."
-    
+
     # try to find a master
     for peer in "${peers[@]}"; do
         log "Checking if ${peer} is primary"
@@ -204,7 +204,7 @@ data:
             break
         fi
     done
-    
+
     if [[ "${primary}" = "${service_name}" ]]; then
         log "This replica is already PRIMARY"
     elif [[ -n "${primary}" ]]; then
@@ -215,28 +215,28 @@ data:
               exit 1
           fi
         fi
-    
+
         sleep 3
         log 'Waiting for replica to reach SECONDARY state...'
         retry_until "${service_name}" "rs.status().myState" "2"
         log '✓ Replica reached SECONDARY state.'
-    
+
     elif (mongo "${ssl_args[@]}" --eval "rs.status()" | grep "no replset config has been received"); then
         log "Initiating a new replica set with myself ($service_name)..."
         mongo "${ssl_args[@]}" --eval "rs.initiate({'_id': '$replica_set', 'members': [{'_id': 0, 'host': '$service_name'}]})"
-    
+
         sleep 3
         log 'Waiting for replica to reach PRIMARY state...'
         retry_until "localhost" "db.isMaster().ismaster" "true"
         primary="${service_name}"
         log '✓ Replica reached PRIMARY state.'
-    
+
         if [[ "${AUTH}" == "true" ]]; then
             log "Creating admin user..."
             mongo admin "${ssl_args[@]}" --eval "db.createUser({user: '${admin_user}', pwd: '${admin_password}', roles: [{role: 'root', db: 'admin'}]})"
         fi
     fi
-    
+
     # User creation
     if [[ -n "${primary}" && "$AUTH" == "true" && "$METRICS" == "true" ]]; then
         metric_user_count=$(mongo admin --host "${primary}" "${admin_creds[@]}" "${ssl_args[@]}" --eval "db.system.users.find({user: '${metrics_user}'}).count()" --quiet | tail -n1)
@@ -284,7 +284,9 @@ kind: Service
 metadata:
   annotations:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
-    {{- toYaml .Values.service.annotations | nindent 4 }}
+    {{- if .Values.service.annotations }}
+      {{- toYaml .Values.service.annotations | nindent 4 }}
+    {{- end }}
   labels:
     app: mongodb-replicaset
     {{- include "harness.service.labels" . | nindent 4 }}
@@ -323,7 +325,7 @@ spec:
         app: mongodb-replicaset
         {{- include "harness.replica.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ include "harness.serviceAccountName" }}
+      serviceAccountName: {{ include "harness.serviceAccountName" . }}
       securityContext:
         runAsUser: 999
         fsGroup: 999
