--- a/helm/harness/templates/pipeline-service.yaml
+++ b/helm/harness/templates/pipeline-service.yaml
@@ -139,7 +139,7 @@ spec:
         app: pipeline-service
         {{- include "harness.replica.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ include "harness.serviceAccountName" }}
+      serviceAccountName: {{ include "harness.serviceAccountName" . }}
       initContainers:
         - name: check-for-mongo
           image: harness/mongo:{{ .Values.versions.mongo }}
