--- a/helm/harness/templates/redis.yaml
+++ b/helm/harness/templates/redis.yaml
@@ -51,7 +51,7 @@ spec:
         app: redis
         {{- include "harness.replica.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ include "harness.serviceAccountName" }}
+      serviceAccountName: {{ include "harness.serviceAccountName" . }}
       securityContext:
         fsGroup: 1000
         runAsNonRoot: true
