--- a/docker-compose/harness/environment/manager.env
+++ b/docker-compose/harness/environment/manager.env
@@ -28,7 +28,7 @@ EVENTS_FRAMEWORK_NETTY_THREADS=1
 EVENTS_FRAMEWORK_REDIS_URL=redis://redis:6379
 EVENT_DELIVERY_ITERATOR_THREAD_COUNT=2
 EXECUTION_EVENT_LISTENER_COUNT=1
-FEATURES=RBAC,LDAP_SSO_PROVIDER,SHELL_SCRIPT_PROVISION,CUSTOM_DASHBOARD,GRAPHQL,SEND_SLACK_NOTIFICATION_FROM_DELEGATE,CONNECTORS_REF_SECRETS_MIGRATION,CDNG_ENABLED,NEXT_GEN_ENABLED,LOG_STREAMING_INTEGRATION,NG_CG_TASK_ASSIGNMENT_ISOLATION
+FEATURES=RBAC,LDAP_SSO_PROVIDER,SHELL_SCRIPT_PROVISION,CUSTOM_DASHBOARD,GRAPHQL,SEND_SLACK_NOTIFICATION_FROM_DELEGATE,CONNECTORS_REF_SECRETS_MIGRATION,CDNG_ENABLED,NEXT_GEN_ENABLED,LOG_STREAMING_INTEGRATION,NG_CG_TASK_ASSIGNMENT_ISOLATION,NG_GIT_ERROR_EXPERIENCE
 GENERAL_NOTIFY_EVENT_LISTENER_COUNT=1
 GRAPHQL_ENABLED=false
 INSTANCE_SYNC_ITERATOR_THREAD_COUNT=2
