--- a/docker-compose/harness/environment/manager.env
+++ b/docker-compose/harness/environment/manager.env
@@ -31,6 +31,7 @@ EXECUTION_EVENT_LISTENER_COUNT=1
 FEATURES=RBAC,LDAP_SSO_PROVIDER,SHELL_SCRIPT_PROVISION,CUSTOM_DASHBOARD,GRAPHQL,SEND_SLACK_NOTIFICATION_FROM_DELEGATE,CONNECTORS_REF_SECRETS_MIGRATION,CDNG_ENABLED,NEXT_GEN_ENABLED,LOG_STREAMING_INTEGRATION,NG_CG_TASK_ASSIGNMENT_ISOLATION,NG_GIT_ERROR_EXPERIENCE
 GENERAL_NOTIFY_EVENT_LISTENER_COUNT=1
 GRAPHQL_ENABLED=false
+HARNESS_ENABLE_NG_AUTH_UI_PLACEHOLDER=true
 INSTANCE_SYNC_ITERATOR_THREAD_COUNT=2
 JAVA_ADVANCED_FLAGS=-XX:-TieredCompilation
 LICENSE_INFO=trialLicense
@@ -53,7 +54,6 @@ SERVER_MAX_THREADS=12
 SERVER_PORT=9090
 SERVICE_ACC=/opt/harness/svc/service_acc.json
 SETTING_ATTRIBUTE_VALIDATE_CONNECTIVITY_ITERATOR_THREAD_COUNT=2
-UI_SERVER_URL=http://proxy
 VAULT_SECRET_MANAGER_ITERATOR_THREAD_COUNT=2
 VERSION=1.0.72106
 WATCHER_METADATA_URL=http://proxy/storage/wingswatchers/watcherprod.txt
