--- a/helm/harness/templates/manager.yaml
+++ b/helm/harness/templates/manager.yaml
@@ -75,6 +75,7 @@ data:
   FEATURES: RBAC,LDAP_SSO_PROVIDER,SHELL_SCRIPT_PROVISION,CUSTOM_DASHBOARD,GRAPHQL,SEND_SLACK_NOTIFICATION_FROM_DELEGATE,CONNECTORS_REF_SECRETS_MIGRATION,CDNG_ENABLED,NEXT_GEN_ENABLED,LOG_STREAMING_INTEGRATION,NG_CG_TASK_ASSIGNMENT_ISOLATION,NG_GIT_ERROR_EXPERIENCE
   GENERAL_NOTIFY_EVENT_LISTENER_COUNT: '{{ .Values.manager.config.general_notify_event_listener_count | default "1" }}'
   GRAPHQL_ENABLED: 'false'
+  HARNESS_ENABLE_NG_AUTH_UI_PLACEHOLDER: 'true'
   INSTANCE_SYNC_ITERATOR_THREAD_COUNT: '2'
   JAVA_ADVANCED_FLAGS: -XX:-TieredCompilation
   LICENSE_INFO: trialLicense
@@ -97,7 +98,7 @@ data:
   SERVER_PORT: '9090'
   SERVICE_ACC: /opt/harness/svc/service_acc.json
   SETTING_ATTRIBUTE_VALIDATE_CONNECTIVITY_ITERATOR_THREAD_COUNT: '2'
-  UI_SERVER_URL: http://proxy
+  UI_SERVER_URL: http://{{ .Values.harness_host | default "host.docker.internal" }}:{{ .Values.listen_port }}
   VAULT_SECRET_MANAGER_ITERATOR_THREAD_COUNT: '2'
   VERSION: 1.0.{{ .Values.versions.manager }}
   WATCHER_METADATA_URL: http://proxy/storage/wingswatchers/watcherprod.txt
