--- a/docker-compose/harness/environment/pipeline-service.env
+++ b/docker-compose/harness/environment/pipeline-service.env
@@ -72,3 +72,4 @@ USE_REDIS_FOR_INTERRUPTS=true
 USE_REDIS_FOR_ORCHESTRATION_EVENTS=true
 USE_REDIS_FOR_SDK_RESPONSE_EVENTS=true
 WEBHOOK_ITERATOR_THREAD_POOL_SIZE=2
+LOCK_CONFIG_REDIS_URL=redis://redis:6379
