--- a/helm/harness/values.yaml
+++ b/helm/harness/values.yaml
@@ -56,6 +56,7 @@ versions:
   redis: 6.2.5-alpine
   scm: release-45
   platform_service: 74972
+  delegate_proxy: 74972
 
 # Resource request & limit configuration per application
 ng_ui:
