--- a/helm/harness/values.yaml
+++ b/helm/harness/values.yaml
@@ -48,15 +48,16 @@ secret:
 versions:
   busybox: 1.33.1
   log_service: release-18
-  manager: 75277
+  manager: 75281
   mongo: 4.2.8
   ng_auth_ui: 0.36.1
-  ng_ui: 0.300.24
+  ng_ui: 0.300.25
   nginx: 1.21.4
   redis: 6.2.5-alpine
   scm: release-45
   platform_service: 75202
-  delegate_proxy: 75221
+  delegate_proxy: 75275a
+  pipeline_service: 75281
 
 # Resource request & limit configuration per application
 ng_ui:
