--- a/docker-compose/harness/docker-compose.yml
+++ b/docker-compose/harness/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   ng-ui:
-    image: harness/nextgenui-signed:0.300.25
+    image: harness/nextgenui-signed:0.315.13
     deploy:
       resources:
         limits:
@@ -17,7 +17,7 @@ services:
       harness-network:
 
   ng-auth-ui:
-    image: harness/ng-auth-ui-signed:0.36.1
+    image: harness/ng-auth-ui-signed:0.42.0
     deploy:
       resources:
         limits:
@@ -32,7 +32,7 @@ services:
       harness-network:
 
   manager:
-    image: harness/manager-signed:75281
+    image: harness/manager-signed:76324
     deploy:
       resources:
         limits:
@@ -54,7 +54,7 @@ services:
       harness-network:
 
   ng-manager:
-    image: harness/ng-manager-signed:75281
+    image: harness/ng-manager-signed:76324
     deploy:
       resources:
         limits:
@@ -70,7 +70,7 @@ services:
       harness-network:
 
   pipeline-service:
-    image: harness/pipeline-service-signed:75281
+    image: harness/pipeline-service-signed:76324
     deploy:
       resources:
         limits:
@@ -87,7 +87,7 @@ services:
       harness-network:
 
   platform-service:
-    image: harness/platform-service-signed:75202
+    image: harness/platform-service-signed:76400
     deploy:
       resources:
         limits:
@@ -117,7 +117,7 @@ services:
       harness-network:
 
   scm:
-    image: harness/ci-scm-signed:release-45
+    image: harness/ci-scm-signed:release-75-ubi
     deploy:
       resources:
         limits:
@@ -130,7 +130,7 @@ services:
       harness-network:
 
   delegate-proxy:
-    image: harness/delegate-proxy-signed:75275a
+    image: harness/delegate-proxy-signed:76324
     deploy:
       resources:
         limits:
@@ -168,7 +168,7 @@ services:
       - ./scripts/wait-for-it.sh:/bin/wait-for-it.sh
 
   redis:
-    image: harness/redis:6.2.5-alpine
+    image: harness/redis:6.2.7-alpine
     deploy:
       resources:
         limits:
@@ -181,7 +181,7 @@ services:
       harness-network:
 
   mongo:
-    image: harness/mongo:4.2.8
+    image: harness/mongo:4.2.19
     deploy:
       resources:
         limits:
