--- a/helm/harness/values.yaml
+++ b/helm/harness/values.yaml
@@ -46,18 +46,18 @@ secret:
 
 # Harness application versions
 versions:
-  busybox: 1.33.1
+  busybox: 1.35.0
   log_service: release-18
-  manager: 75281
-  mongo: 4.2.8
-  ng_auth_ui: 0.36.1
-  ng_ui: 0.300.25
+  manager: 76324
+  mongo: 4.2.19
+  ng_auth_ui: 0.42.0
+  ng_ui: 0.315.13
   nginx: 1.21.4
-  redis: 6.2.5-alpine
-  scm: release-45
-  platform_service: 75202
-  delegate_proxy: 75275a
-  pipeline_service: 75281
+  redis: 6.2.7-alpine
+  scm: release-75-ubi
+  platform_service: 76400
+  delegate_proxy: 76324
+  pipeline_service: 76324
 
 # Resource request & limit configuration per application
 ng_ui:
