reverted the wget for log-service

--- a/docker-compose/harness/docker-compose.yml
+++ b/docker-compose/harness/docker-compose.yml
@@ -112,7 +112,7 @@ services:
     expose:
       - '8079'
     healthcheck:
-      test: "curl -s http://localhost:8079/healthz"
+      test: "wget -q -O - http://localhost:8079/healthz"
     networks:
       harness-network:
 
