--- a/helm/harness/values.yaml
+++ b/helm/harness/values.yaml
@@ -48,16 +48,16 @@ secret:
 versions:
   busybox: 1.35.0
   log_service: release-18
-  manager: 76620
+  manager: 77000
   mongo: 4.2.19
-  ng_auth_ui: 0.42.0
-  ng_ui: 0.318.6
+  ng_auth_ui: 0.42.2
+  ng_ui: 0.321.11
   nginx: 1.21.4
   redis: 6.2.7-alpine
   scm: release-75-ubi
-  platform_service: 76600
-  delegate_proxy: 76614
-  pipeline_service: 1.6.0
+  platform_service: 77000
+  delegate_proxy: 76818_2
+  pipeline_service: 1.11.1
 
 # Resource request & limit configuration per application
 ng_ui:
