--- a/helm/harness/templates/manager.yaml
+++ b/helm/harness/templates/manager.yaml
@@ -78,6 +78,7 @@ data:
   GRAPHQL_ENABLED: 'false'
   HARNESS_ENABLE_NG_AUTH_UI_PLACEHOLDER: 'true'
   INSTANCE_SYNC_ITERATOR_THREAD_COUNT: '2'
+  IMMUTABLE_DELEGATE_DOCKER_IMAGE: harness/delegate:22.12.77629
   JAVA_ADVANCED_FLAGS: -XX:-TieredCompilation
   LICENSE_INFO: trialLicense
   LOGGERS: org.reflections.Reflections=ERROR
