--- a/helm/harness/templates/manager.yaml
+++ b/helm/harness/templates/manager.yaml
@@ -79,6 +79,7 @@ data:
   HARNESS_ENABLE_NG_AUTH_UI_PLACEHOLDER: 'true'
   INSTANCE_SYNC_ITERATOR_THREAD_COUNT: '2'
   IMMUTABLE_DELEGATE_DOCKER_IMAGE: harness/delegate:22.12.77629
+  UPGRADER_DOCKER_IMAGE: harness/upgrader:latest
   JAVA_ADVANCED_FLAGS: -XX:-TieredCompilation
   LICENSE_INFO: trialLicense
   LOGGERS: org.reflections.Reflections=ERROR
