--- a/helm/harness/values.yaml
+++ b/helm/harness/values.yaml
@@ -47,17 +47,17 @@ secret:
 # Harness application versions
 versions:
   busybox: 1.35.0
-  log_service: release-18
-  manager: 78425
-  mongo: 4.2.19
-  ng_auth_ui: 1.3.3
-  ng_ui: 0.339.20
+  log_service: release-61-ubi
+  manager: 78927
+  mongo: 4.4.19
+  ng_auth_ui: 1.4.0
+  ng_ui: 0.344.19
   nginx: 1.21.4
   redis: 6.2.7-alpine
   scm: release-114-ubi
-  platform_service: 78202
-  delegate_proxy: 78111
-  pipeline_service: 1.21.13
+  platform_service: 78602
+  delegate_proxy: 78904
+  pipeline_service: 1.26.9
 
 # Resource request & limit configuration per application
 ng_ui:
