--- a/docker-compose/harness/docker-compose.yml
+++ b/docker-compose/harness/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   ng-ui:
-    image: harness/nextgenui-signed:0.344.20
+    image: harness/nextgenui-signed:0.347.19
     deploy:
       resources:
         limits:
@@ -17,7 +17,7 @@ services:
       harness-network:
 
   ng-auth-ui:
-    image: harness/ng-auth-ui-signed:1.4.0
+    image: harness/ng-auth-ui-signed:1.5.0
     deploy:
       resources:
         limits:
@@ -32,7 +32,7 @@ services:
       harness-network:
 
   manager:
-    image: harness/manager-signed:78927
+    image: harness/manager-signed:79228
     deploy:
       resources:
         limits:
@@ -54,7 +54,7 @@ services:
       harness-network:
 
   ng-manager:
-    image: harness/ng-manager-signed:78927
+    image: harness/ng-manager-signed:79228
     deploy:
       resources:
         limits:
@@ -70,7 +70,7 @@ services:
       harness-network:
 
   pipeline-service:
-    image: harness/pipeline-service-signed:1.26.9
+    image: harness/pipeline-service-signed:1.29.10
     deploy:
       resources:
         limits:
@@ -87,7 +87,7 @@ services:
       harness-network:
 
   platform-service:
-    image: harness/platform-service-signed:78602
+    image: harness/platform-service-signed:78903
     deploy:
       resources:
         limits:
@@ -102,7 +102,7 @@ services:
       harness-network:
 
   log-service:
-    image: harness/log-service-signed:release-61-ubi
+    image: harness/log-service-signed:release-70-ubi
     deploy:
       resources:
         limits:
@@ -112,12 +112,12 @@ services:
     expose:
       - '8079'
     healthcheck:
-      test: "wget -q -O - http://localhost:8079/healthz"
+      test: "curl http://localhost:8079/healthz"
     networks:
       harness-network:
 
   scm:
-    image: harness/ci-scm-signed:release-114-ubi
+    image: harness/ci-scm-signed:release-127-ubi
     deploy:
       resources:
         limits:
@@ -130,7 +130,7 @@ services:
       harness-network:
 
   delegate-proxy:
-    image: harness/delegate-proxy-signed:78904
+    image: harness/delegate-proxy-signed:78918
     deploy:
       resources:
         limits:
@@ -181,7 +181,7 @@ services:
       harness-network:
 
   mongo:
-    image: harness/mongo:4.4.19
+    image: mongo:4.4.22
     deploy:
       resources:
         limits:
