--- a/helm/harness/templates/manager.yaml
+++ b/helm/harness/templates/manager.yaml
@@ -139,6 +139,7 @@ metadata:
   labels:
     {{- include "harness.deployment.labels" . | nindent 4 }}
 spec:
+  replicas: {{ .Values.manager.replicaCount | default 1 }}
   selector:
     matchLabels:
       app: manager
