--- a/helm/harness/templates/proxy.yaml
+++ b/helm/harness/templates/proxy.yaml
@@ -211,6 +211,7 @@ metadata:
   labels:
     {{- include "harness.deployment.labels" . | nindent 4 }}
 spec:
+  replicas: {{ .Values.proxy.replicaCount | default 1 }}
   selector:
     matchLabels:
       app: proxy
