--- a/helm/harness/templates/redis.yaml
+++ b/helm/harness/templates/redis.yaml
@@ -40,6 +40,7 @@ metadata:
     app: redis
     {{- include "harness.deployment.labels" . | nindent 4 }}
 spec:
+  replicas: {{ .Values.redis.replicaCount | default 1 }}
   selector:
     matchLabels:
       app: redis
