--- a/helm/harness/templates/ng-ui.yaml
+++ b/helm/harness/templates/ng-ui.yaml
@@ -40,6 +40,7 @@ metadata:
     app: ng-ui
     {{- include "harness.deployment.labels" . | nindent 4 }}
 spec:
+  replicas: {{ .Values.ng_ui.replicaCount | default 1 }}
   selector:
     matchLabels:
       app: ng-ui
