--- a/helm/harness/templates/pipeline-service.yaml
+++ b/helm/harness/templates/pipeline-service.yaml
@@ -128,6 +128,7 @@ metadata:
     app: pipeline-service
     {{- include "harness.deployment.labels" . | nindent 4 }}
 spec:
+  replicas: {{ .Values.pipeline.replicaCount | default 1 }}
   selector:
     matchLabels:
       app: pipeline-service
