--- a/helm/harness/templates/scm-service.yaml
+++ b/helm/harness/templates/scm-service.yaml
@@ -24,6 +24,7 @@ metadata:
   labels:
     {{- include "harness.deployment.labels" . | nindent 4 }}
 spec:
+  replicas: {{ .Values.scm.replicaCount | default 1 }}
   selector:
     matchLabels:
       app: scm
